updated to ng7 and code style refactor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "dom"
     ],
     "paths": {
-      "fs-package": [
+      "@firestitch/tree": [
         "src/public_api.ts"
       ]
     }
