--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
   "engines": {
     "node": ">=6.0.0"
   },
-  "peerDependencies": {}
+  "peerDependencies": {},
+  "dependencies": {
+    "@firestitch/menu": "^0.1.6"
+  }
 }
