--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@compodoc/compodoc": "^1.1.7",
     "@firestitch/example": "^0.6.0",
-    "@firestitch/iframe": "^0.2.0",
     "@firestitch/message": "^0.2.0",
+    "@firestitch/example": "^7.0.7",
+    "@firestitch/menu": "^7.0.1",
+    "@firestitch/drawer": "^7.0.1",
     "codelyzer": "^4.5.0",
     "cpx": "^1.5.0",
     "hammerjs": "^2.0.8",
