--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@firestitch/tree",
   "description": "@firestitch/tree",
-  "version": "7.0.4",
+  "version": "9.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/Firestitch/ngx-tree"
@@ -27,44 +27,46 @@
     "serve": "cd tools && npm run cli:serve"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.0",
-    "@angular-devkit/build-ng-packagr": "^0.13.0",
-    "@angular/animations": "^7.2.2",
-    "@angular/cdk": "^7.3.0",
-    "@angular/cli": "^7.2.3",
-    "@angular/common": "^7.2.2",
-    "@angular/compiler": "^7.2.2",
-    "@angular/compiler-cli": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/flex-layout": "^7.0.0-beta.23",
-    "@angular/forms": "^7.2.2",
-    "@angular/http": "^7.2.2",
-    "@angular/material": "^7.3.0",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@compodoc/compodoc": "^1.1.7",
-    "@firestitch/example": "^7.0.7",
-    "@firestitch/message": "^0.2.0",
-    "@firestitch/menu": "^7.0.1",
-    "@firestitch/drawer": "^7.0.1",
-    "codelyzer": "^4.5.0",
+    "@angular-devkit/build-angular": "^0.900.1",
+    "@angular-devkit/build-ng-packagr": "^0.900.1",
+    "@angular/animations": "^9.0.0",
+    "@angular/cdk": "^9.0.0",
+    "@angular/cli": "^9.0.1",
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/forms": "^9.0.0",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/router": "^9.0.0",
+    "@compodoc/compodoc": "^1.1.11",
+    "@firestitch/drawer": "^8.0.4",
+    "@firestitch/example": "^8.0.0",
+    "@firestitch/iframe": "^8.0.0",
+    "@firestitch/menu": "^8.1.0",
+    "@firestitch/message": "^8.1.0",
+    "codelyzer": "^5.2.1",
     "cpx": "^1.5.0",
-    "hammerjs": "^2.0.8",
-    "ng-packagr": "^4.7.0",
+    "highlight.js": "^9.18.1",
+    "lodash-es": "^4.17.15",
+    "ng-packagr": "^9.0.0",
+    "ngx-toastr": "^12.0.0",
     "npm-run-all": "^4.1.5",
-    "rxjs": "^6.4.0",
-    "tsickle": "^0.34.3",
-    "tslib": "^1.9.3",
-    "tslint": "^5.12.1",
-    "typescript": "^3.1.6",
-    "webpack": "^4.29.1",
-    "webpack-dev-server": "^3.1.14",
-    "zone.js": "^0.8.29"
+    "rxjs": "^6.5.4",
+    "tsickle": "^0.38.0",
+    "tslib": "^1.10.0",
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.5",
+    "webpack-dev-server": "^3.10.3",
+    "zone.js": "^0.10.2"
   },
   "engines": {
     "node": ">=6.0.0"
   },
-  "peerDependencies": {
-    "@firestitch/menu": ">=7.0.0"
-  }
+  "peerDependencies": {}
 }
