--- a/package.json
+++ b/package.json
@@ -28,43 +28,44 @@
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.1",
-    "@angular-devkit/build-ng-packagr": "^0.900.1",
-    "@angular/animations": "^9.0.0",
-    "@angular/cdk": "^9.0.0",
-    "@angular/cli": "^9.0.1",
-    "@angular/common": "^9.0.0",
-    "@angular/compiler": "^9.0.0",
-    "@angular/compiler-cli": "^9.0.0",
-    "@angular/core": "^9.0.0",
+    "@angular-devkit/build-angular": "^0.901.1",
+    "@angular-devkit/build-ng-packagr": "^0.901.1",
+    "@angular/animations": "^9.1.2",
+    "@angular/cdk": "^9.2.1",
+    "@angular/cli": "^9.1.1",
+    "@angular/common": "^9.1.2",
+    "@angular/compiler": "^9.1.2",
+    "@angular/compiler-cli": "^9.1.2",
+    "@angular/core": "^9.1.2",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "^9.0.0",
+    "@angular/forms": "^9.1.2",
     "@angular/http": "^7.2.16",
-    "@angular/material": "^9.0.0",
-    "@angular/platform-browser": "^9.0.0",
-    "@angular/platform-browser-dynamic": "^9.0.0",
-    "@angular/router": "^9.0.0",
+    "@angular/material": "^9.2.1",
+    "@angular/platform-browser": "^9.1.2",
+    "@angular/platform-browser-dynamic": "^9.1.2",
+    "@angular/router": "^9.1.2",
     "@compodoc/compodoc": "^1.1.11",
     "@firestitch/drawer": "^8.0.4",
-    "@firestitch/example": "^8.0.0",
+    "@firestitch/example": "^9.0.0",
     "@firestitch/iframe": "^8.0.0",
-    "@firestitch/menu": "^8.1.0",
+    "@firestitch/menu": "^9.0.2",
     "@firestitch/message": "^8.1.0",
     "codelyzer": "^5.2.1",
     "cpx": "^1.5.0",
     "highlight.js": "^9.18.1",
     "lodash-es": "^4.17.15",
     "ng-packagr": "^9.0.0",
+    "ngx-highlightjs": "^4.1.0-beta",
     "ngx-toastr": "^12.0.0",
     "npm-run-all": "^4.1.5",
     "rxjs": "^6.5.4",
     "tsickle": "^0.38.0",
     "tslib": "^1.10.0",
     "tslint": "^6.0.0",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.3",
     "webpack": "^4.41.5",
     "webpack-dev-server": "^3.10.3",
-    "zone.js": "^0.10.2"
+    "zone.js": "^0.10.3"
   },
   "engines": {
     "node": ">=6.0.0"
