--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.1",
-    "@angular-devkit/build-ng-packagr": "^0.901.1",
+    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular-devkit/build-ng-packagr": "~0.901.1",
     "@angular/animations": "^9.1.2",
     "@angular/cdk": "^9.2.1",
     "@angular/cli": "^9.1.1",
@@ -50,7 +50,7 @@
     "@firestitch/iframe": "^8.0.0",
     "@firestitch/menu": "^9.1.0",
     "@firestitch/message": "^8.1.0",
-    "codelyzer": "^5.2.1",
+    "codelyzer": "^5.1.2",
     "cpx": "^1.5.0",
     "highlight.js": "^9.18.1",
     "lodash-es": "^4.17.15",
@@ -59,16 +59,17 @@
     "ngx-toastr": "^12.0.0",
     "npm-run-all": "^4.1.5",
     "rxjs": "^6.5.4",
-    "tsickle": "^0.38.0",
-    "tslib": "^1.10.0",
     "tslint": "^6.0.0",
     "typescript": "^3.8.3",
     "webpack": "^4.41.5",
     "webpack-dev-server": "^3.10.3",
-    "zone.js": "^0.10.3"
+    "zone.js": "~0.10.2"
   },
   "engines": {
     "node": ">=6.0.0"
   },
-  "peerDependencies": {}
+  "peerDependencies": {},
+  "dependencies": {
+    "tslib": "^1.10.0"
+  }
 }
