--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular-devkit/build-angular": "^0.901.1",
     "@angular-devkit/build-ng-packagr": "~0.901.1",
     "@angular/animations": "^9.1.2",
     "@angular/cdk": "^9.2.1",
@@ -60,9 +60,7 @@
     "npm-run-all": "^4.1.5",
     "rxjs": "^6.5.4",
     "tslint": "^6.0.0",
-    "typescript": "^3.8.3",
-    "webpack": "^4.41.5",
-    "webpack-dev-server": "^3.10.3",
+    "typescript": "3.8.3",
     "zone.js": "~0.10.2"
   },
   "engines": {
