--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@firestitch/store": "^15.0.0",
     "@firestitch/style": "^15.0.0",
     "date-fns": "^2.28.0",
+    "date-fns-tz": "^2.0.0",
     "lodash-es": "^4.17.21",
     "rxjs": "^6.6.7",
     "typescript": "^4.9.5",
