--- a/package.json
+++ b/package.json
@@ -43,19 +43,24 @@
     "@angular/platform-browser-dynamic": "^18.2.7",
     "@angular/router": "^18.2.7",
     "@firestitch/api": "^18.0.7",
+    "@firestitch/autocomplete": "^18.0.5",
     "@firestitch/component-tools": "^18.0.16",
     "@firestitch/core": "^18.0.1",
-    "@firestitch/date": "^18.0.1",
+    "@firestitch/date": "^18.0.4",
+    "@firestitch/dialog": "^18.0.17",
     "@firestitch/drawer": "^18.0.1",
     "@firestitch/example": "^18.0.7",
-    "@firestitch/file": "^18.0.4",
+    "@firestitch/file": "^18.0.6",
+    "@firestitch/filter": "^18.0.30",
+    "@firestitch/html": "^18.0.0",
     "@firestitch/iframe": "^18.0.0",
     "@firestitch/label": "^18.0.15",
     "@firestitch/lint": "^18.0.19",
     "@firestitch/menu": "^18.0.5",
     "@firestitch/message": "^18.0.2",
+    "@firestitch/selectbutton": "^18.0.7",
     "@firestitch/store": "^18.0.0",
-    "@firestitch/style": "^18.0.38",
+    "@firestitch/style": "^18.0.41",
     "lodash-es": "^4.17.21",
     "rxjs": "^7.5.6",
     "typescript": "^5.4.5",
