chore: add missing deps

--- a/package.json
+++ b/package.json
@@ -44,21 +44,31 @@
     "@angular/router": "^18.2.7",
     "@firestitch/api": "^18.0.7",
     "@firestitch/autocomplete": "^18.0.5",
+    "@firestitch/autocomplete-chips": "^18.0.52",
+    "@firestitch/chip": "^18.0.21",
+    "@firestitch/clear": "^18.0.10",
+    "@firestitch/common": "^18.0.1",
     "@firestitch/component-tools": "^18.0.16",
     "@firestitch/core": "^18.0.1",
     "@firestitch/date": "^18.0.4",
+    "@firestitch/datepicker": "^18.0.8",
     "@firestitch/dialog": "^18.0.17",
     "@firestitch/drawer": "^18.0.1",
     "@firestitch/example": "^18.0.7",
     "@firestitch/file": "^18.0.6",
     "@firestitch/filter": "^18.0.30",
+    "@firestitch/form": "^18.0.12",
     "@firestitch/html": "^18.0.0",
     "@firestitch/iframe": "^18.0.0",
     "@firestitch/label": "^18.0.15",
     "@firestitch/lint": "^18.0.19",
     "@firestitch/menu": "^18.0.5",
     "@firestitch/message": "^18.0.2",
+    "@firestitch/popover": "^18.0.0",
+    "@firestitch/scroll": "^18.0.0",
+    "@firestitch/scroll-picker": "^18.0.0",
     "@firestitch/selectbutton": "^18.0.7",
+    "@firestitch/skeleton": "^18.0.0",
     "@firestitch/store": "^18.0.0",
     "@firestitch/style": "^18.0.41",
     "lodash-es": "^4.17.21",
